--- a/style.css
+++ b/style.css
@@ -690,7 +690,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
 }
 
 .tight-width-whitespace {
@@ -752,6 +752,7 @@ h4 {
 
 .white {
     color: #FFFFFF!important;
+    font-size: 18PX;
 }
 
 .portfolio-thumb {
