--- a/style.css
+++ b/style.css
@@ -836,6 +836,7 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.test.jpg");
+    background-size: cover;
 }
 
 @media (max-width: 1024px) {
