--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgb(255, 255, 255);
+    color: #4c4c4c;
 }
 
 .d-bloc .a-btn:hover,
@@ -751,7 +751,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #4c4c4c!important;
     font-size: 16PX;
 }
 
@@ -796,8 +796,8 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    background: rgb(243 151 108 / 100%);
+    color: #4c4c4c!important;
 }
 
 .btn-atomic-tangerine:hover {
